# CLR-DEV9

./: .gitattributes  .gitignore  CLR_DEV9.sln  DllExport Configure.bat  README.md
CLR_DEV9/: AssemblyLoader.cs  CLR_DEV9.csproj  CLR_DEV9_CORE.csproj  Config.cs  ConfigDirectIP.cs  ConfigForm.Designer.cs  ConfigForm.cs  ConfigFormEth.Designer.cs  ConfigFormEth.cs  ConfigFormHdd.Designer.cs  ConfigFormHdd.cs  ConfigSocketIP.cs  DEV9.cs  DEV9Header.cs  DEV9LogSources.cs  GlobalSuppressions.cs  HddCreate.Designer.cs  HddCreate.cs  Utils.cs  Win32.cs  Winsock.cs  flash.cs  net.cs  netHeader.cs  smap.cs  tap.cs
CLR_DEV9/Config/: Config.cs  ConfigDirectIP.cs  ConfigFile.cs  ConfigForm.Designer.cs  ConfigForm.cs  ConfigFormEth.Designer.cs  ConfigFormEth.cs  ConfigFormHdd.Designer.cs  ConfigFormHdd.cs  ConfigFormHdd.resx  ConfigFormIncomingPorts.Designer.cs  ConfigFormIncomingPorts.cs  ConfigFormIncomingPorts.resx  ConfigHost.cs  ConfigIncomingPort.cs  ConfigLogging.cs  ConfigSocketIP.cs
CLR_DEV9/DEV9/: DEV9_State.cs  DEV9_State_Regs.cs
CLR_DEV9/PSE/: CLR_PSE.cs  CLR_PSE_Callbacks.cs  CLR_PSE_DEV9.cs  CLR_PSE_DummyExport.cs  CLR_PSE_FreezeData.cs  CLR_PSE_Mono.cs  CLR_PSE_NativeLogger.cs  CLR_PSE_NativeLoggerWin.cs  CLR_PSE_PluginLog.cs  CLR_PSE_SudoPtr.cs  CLR_PSE_Utils.cs  CLR_PSE_Version.cs
CLR_DEV9/PacketReader/: EtherFrameType.cs  EthernetFrame.cs  EthernetPayload.cs  NetLib.cs
CLR_DEV9/Properties/: AssemblyInfo.cs
CLR_DEV9/Sessions/: DHCPsession.cs  ICMPSession.cs  Session.cs  UDPSession.cs
CLR_DEV9_LINUX/: CLR_DEV9_LINUX.vcxproj  CLR_DEV9_LINUX.vcxproj.filters  CMakeLists.txt  DEV9.cpp  DEV9.h  LinuxBuild.md  PS2E.cpp  PSE.cpp  PSE.h  build.sh  coreclrhost.h
CLR_DEV9_LINUX_MONO/: BundleMono.sh  CLR_DEV9_LINUX.vcxproj.filters  CLR_DEV9_LINUX_MONO.vcxproj  CMakeLists.txt  DEV9.cpp  DEV9.h  LinuxBuild.md  PSE.cpp  PSE.h  build.sh
CLR_EMBED_TEST/: CLR_EMBED_TEST.vcxproj  main.cpp
CLR_EMBED_TEST/readme/: readme.html
DNS Test Thing/: DNS Test Thing.csproj  Program.cs
DNS Test Thing/PacketReader/: DNS.cs  DNSClasses.cs  NetLib.cs
DNS Test Thing/Properties/: AssemblyInfo.cs
DummyMain/: DummyMain.csproj  Program.cs
DummyMain/Properties/: AssemblyInfo.cs
MonoTest/: MonoTest.csproj  TestForms.cs  TestForms.txt
MonoTestEmbed/: MonoTestEmbed.vcxproj  main.cpp  main.txt
MonoTestEmbedLib/: MonoTestEmbedLib.vcxproj  main.cpp
UPNP Test Thing/: UPNP Test Thing.sln
(+102 files in other folders)
